twitter-clone/k8s-simple/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: twitter
  labels:
    name: twitter
